# ProdigiMover-Small

./: README.md
prodigimover-small/: CMakeLists.txt  package.xml
prodigimover-small_bringup/: CMakeLists.txt  package.xml
prodigimover-small_bringup/esp32/firmware/lib/Kinematics/: Kinematics.cpp  Kinematics.ino
prodigimover-small_bringup/esp32/firmware/lib/config/: prodigimover_base_config.h
prodigimover-small_bringup/esp32/firmware/lib/imu/: .I2Cbus.hpp.swo  .I2Cbus.hpp.swp  I2Cbus.hpp  I2Cdev.h  imu.h  imu_config.h
prodigimover-small_bringup/esp32/firmware/lib/motor/: Motor.cpp  Motor.h
prodigimover-small_bringup/esp32/firmware/src/prodigimover_base6/: prodigimover_base6.ino
prodigimover-small_bringup/include/: prodigimover_small_odom.h
prodigimover-small_bringup/launch/: bringup_calib.launch  bringup_with_lidar.launch  core.launch  imu.launch  rosbag_all.launch  ydlidar.launch
prodigimover-small_bringup/param/: ekf_robot_localization.yaml
prodigimover-small_bringup/rviz/: bringup.rviz
prodigimover-small_bringup/src/: prodigimover_small_odom.cpp  prodigimover_small_odom_node.cpp
prodigimover-small_description/: CMakeLists.txt  package.xml
prodigimover-small_description/launch/: description.launch
prodigimover-small_description/meshes/: Base_Link.STL  base_link.STL
prodigimover-small_description/rviz/: description.rviz
prodigimover-small_description/urdf/: prodigimover-small.urdf  prodigimover-small.urdf.xacro  prodigimover.urdf  prodigimover.urdf.xacro  prodigimover01.urdf.xacro  prodigimover_gazebo.xacro
prodigimover-small_msgs/: CMakeLists.txt  package.xml
prodigimover-small_msgs/msg/: Imu.msg  MagneticField.msg
prodigimover-small_navigation/: CMakeLists.txt  package.xml
prodigimover-small_navigation/config/: local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
prodigimover-small_navigation/launch /: amcl.launch  hybrid_astar.launch  move_base.launch  navigation1.launch  navigation2.launch  navigation3.launch  navigation_astar.launch  rrt.launch
prodigimover-small_navigation/maps/: map.pgm
prodigimover-small_navigation/param/: amcl.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml
prodigimover-small_navigation/rviz/: amcl.rviz  hybrid_astar.rviz  navigation.rviz
prodigimover-small_simulation/: CMakeLists.txt  package.xml
prodigimover-small_simulation/config/: prodigimover_control.yaml
prodigimover-small_simulation/launch/: prodigimover_gazebo01.launch  prodigimover_gazebo02.launch  prodigimover_gazebo03.launch  prodigimover_gazebo04.launch  turtlebot3_autorace_2020_pro.launch  turtlebot3_empty_world_pro.launch
prodigimover-small_simulation/worlds/: raceway.world  turtlebot3_autorace.world  workhouse.world
prodigimover-small_slam/: CMakeLists.txt  package.xml
prodigimover-small_slam/launch/: gmapping.launch  gmapping02.launch  map_saver.launch
prodigimover-small_slam/rviz/: gmapping.rviz  gmapping02.rviz  gmapping03.rviz
prodigimover-small_teleop/: CMakeLists.txt  package.xml  setup.py
prodigimover-small_teleop/nodes/: prodigimover_teleop_key
