<?xml version="1.0"?>
<package format="2">
  <name>prodigimover-small_bringup</name>
  <version>0.0.0</version>
  <description>The prodigimover-small_bringup package</description>

    <maintainer email="demirneslihan85@gmail.com">Neslihan Demir</maintainer>

  <license>TODO</license>

  <author email="demirneslihan85@gmail.com">Neslihan Demir</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>prodigimover_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosserial_python</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>prodigimover_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>prodigimover_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>messeage_runtime</exec_depend>

</package>