<?xml version="1.0"?>
<package format="2">
  <name>prodigimover-small_simulation</name>
  <version>0.0.0</version>
  <description>The prodigimover-small_simulation package</description>

  <maintainer email="demirneslihan85@gmail.com">Neslihan Demir</maintainer>

  <license>TODO</license>

  <author email="demirneslihan85@gmail.com">Neslihan Demir</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>prodigimover_description</exec_depend>

</package>
