<?xml version="1.0"?>
<package format="2">
  <name>prodigimover-small_slam</name>
  <version>0.0.0</version>
  <description>The prodigimover-small_slam package</description>

  <maintainer email="demirneslihan85@gmail.com">Neslihan Demir</maintainer>

  <license>TODO</license>

  <author email="demirneslihan85@gmail.com">Neslihan Demir</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>
