<?xml version="1.0"?>
<package format="2">
  <name>prodigimover-small_teleop</name>
  <version>0.0.0</version>
  <description>The prodigimover-small_teleop package</description>

  <maintainer email="demirneslihan85@gmail.com">Neslihan Demir</maintainer>

  <license>TODO</license>

  <author email="demirneslihan85@gmail.com">Neslihan Demir</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>joy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>roscpp</exec_depend>


</package>
